feat: add `getProjectsInSpecificOrg` controller function
